--- a/index.html
+++ b/index.html
@@ -8,8 +8,35 @@
 </head>
 <body>
     <div id="container">
-    
     </div>
+
+    <h5>Spring 2017</h5>
+    <table>
+        <thead>
+            <th>Day</th>
+            <th>Classes</th>
+        </thead>
+        <tr>
+          <td>Monday</td>
+          <td>Herbology, Divination, History of Magic</td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td>Charms, Potions, Transfiguration, Defense Against the Dark Arts</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>Herbology, Divination, History of Magic</td>
+        </tr>
+        <tr>
+            <td>Thursday</td>
+            <td>Charms, Potions, Transfiguration, Defense Against the Dark Arts</td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td>No Classes</td>
+        </tr>
+    </table>
 
     <script type="text/javascript" src="app.js"></script>
 </body>
