Year 7 - I am getting more comfortable with ambiguous instructions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Hogwarts</title>
     <link rel="stylesheet" href="main.css">
 </head>
+<header>
+    <img src = "https://i.imgur.com/HwyuGCv.png" alt = "hogwarts" height = "200"/>
+</header>
 <body>
     <div id="container">
 
